Fazendo o html e o css das páginas

--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FloodWatch | Home</title>
-    <link rel="stylesheet" href="./src/CSS/style.css">
+    <title>Página Inicial - GS-FrontEndDesign</title>
+    <link rel="stylesheet" href="src/CSS/style.css">
 </head>
 <body>
-    <script src="./src/JS/script.js"></script>
-</body>
-</html>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="pages/beneficios.html">Benefícios</a></li>
+                <li><a href="pages/objetivos.html">Objetivos</a></li>
+                <li><a href="pages/publicoAlvo.html">Público Alvo</a></li>
+                <li><a href="pages/solucao-dia-a-dia.html">Solução Dia a Dia</a></li>
+                <li><a href="pages/tecnologias.html">Tecnologias</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container">
+        <h1 class="section-title">INTRODUÇÃO</h1>
+        <p class="company-name">Nome da Empresa : FloodWatch</p>
+
+        <h2>Introdução:</h2>
+        <p>Em um mundo cada vez mais afetado pelas mudanças climáticas, a FloodWatch surge com a missão de prevenir desastres e salvar vidas por meio da tecnologia. Somos uma empresa especializada em soluções inteligentes para o monitoramento e alerta precoce de enchentes, combinando sensores de nível de água, análise de dados em tempo real e comunicação eficiente com a população e órgãos públicos. Nosso sistema integrado permite identificar riscos com antecedência, minimizando danos e otimizando respostas emergenciais. Com atuação voltada para áreas urbanas e regiões vulneráveis, a FloodWatch promove segurança hídrica, planejamento urbano resiliente e proteção ambiental. Monitoramos o presente para proteger o futuro.</p>
+
+        <h2>Dores a serem atendidas:</h2>
+        <div style="display: flex; justify-content: space-between;">
+            <div style="flex: 1; margin-right: 10px;">
+                <h3>Dores da População:</h3>
+                <ul>
+                    <li>Falta de aviso prévio sobre enchentes.</li>
+                    <li>Perda de bens materiais, moradia e, em casos extremos, vidas.</li>
+                    <li>Insegurança constante em épocas de chuva.</li>
+                    <li>Desinformação sobre áreas de risco e rotas seguras.</li>
+                    <li>Ausência de suporte rápido durante e após os alagamentos.</li>
+                </ul>
+            </div>
+            <div style="flex: 1; margin-left: 10px;">
+                <h3>Dores do Governo:</h3>
+                <ul>
+                    <li>Dificuldade na coleta de dados precisos e em tempo real.</li>
+                    <li>Resposta lenta e desorganizada a desastres.</li>
+                    <li>Falta de integração entre setores (defesa civil, meio ambiente, infraestrutura).</li>
+                    <li>Baixa capacidade de prevenção, atuando majoritariamente de forma reativa
