Adicionando mais infromações na página sobre nós

--- a/pages/about.html
+++ b/pages/about.html
@@ -45,3 +45,49 @@
                 <p>A Flood Watch é uma empresa pioneira dedicada ao monitoramento inteligente dos níveis de água em rios, bueiros e reservatórios. Nossa missão é fornecer dados precisos e alertas antecipados para ajudar comunidades e autoridades a mitigar os riscos de inundações, protegendo vidas e patrimônios. Utilizamos tecnologia de ponta e uma equipe de especialistas para oferecer soluções confiáveis e eficientes.</p>
             </div>
         </section>
+
+        <section id="technologies" class="content-section alt-bg">
+            <div class="container">
+                <h2>Tecnologias Utilizadas</h2>
+                <p>Para garantir a máxima precisão e confiabilidade em nosso monitoramento, a Flood Watch emprega um conjunto robusto de tecnologias avançadas. Nossa infraestrutura combina hardware de ponta com software inteligente para oferecer uma solução completa:</p>
+                <div class="tech-grid">
+                    <div class="tech-item">
+                        <h3>Sensores Ultrassônicos e de Pressão</h3>
+                        <p>Dispositivos de alta precisão para medição contínua dos níveis de água em diferentes ambientes, como rios, córregos e bueiros.</p>
+                    </div>
+                    <div class="tech-item">
+                        <h3>Conectividade IoT (Internet das Coisas)</h3>
+                        <p>Utilizamos módulos de comunicação de baixo consumo de energia (NB-IoT, LoRaWAN) para transmissão eficiente de dados dos sensores para a nuvem.</p>
+                    </div>
+                    <div class="tech-item">
+                        <h3>Plataforma de Nuvem (Cloud Computing)</h3>
+                        <p>Nossos dados são armazenados e processados em infraestrutura de nuvem escalável, garantindo disponibilidade, segurança e capacidade de análise.</p>
+                    </div>
+                    <div class="tech-item">
+                        <h3>Inteligência Artificial e Machine Learning</h3>
+                        <p>Algoritmos avançados analisam padrões de dados para identificar tendências, prever picos de cheia e gerar alertas proativos com maior precisão.</p>
+                    </div>
+                    <div class="tech-item">
+                        <h3>Dashboards Interativos e Aplicativos Móveis</h3>
+                        <p>Interfaces intuitivas permitem que autoridades e usuários visualizem dados em tempo real, recebam alertas e acessem relatórios de forma fácil e rápida.</p>
+                    </div>
+                    <div class="tech-item">
+                        <h3>Sistema de Alerta Multicanal</h3>
+                        <p>Envio de notificações críticas via SMS, e-mail e integração com sistemas de defesa civil, garantindo que a informação chegue a quem precisa.</p>
+                    </div>
+                </div>
+                <p>A combinação dessas tecnologias nos permite oferecer um sistema de monitoramento inteligente, capaz de prever e mitigar os impactos de eventos hídricos extremos.</p>
+            </div>
+        </section>
+        </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; <span id="current-year"></span> Flood Watch. Todos os direitos reservados.</p>
+            <p>Tecnologia a serviço da sua segurança.</p>
+        </div>
+    </footer>
+
+    <script src="../src/JS/script.js"></script>
+</body>
+</html>
