Adicionando mais informações na página monitoring.html

--- a/pages/monitoring.html
+++ b/pages/monitoring.html
@@ -54,3 +54,27 @@
                 <p>Com acesso a informações precisas e atualizadas, esses públicos podem reagir de forma mais eficaz e construir um ambiente mais seguro e resiliente frente aos desafios hídricos.</p>
             </div>
         </section>
+        <section id="monitoring-content" class="content-section">
+            <div class="container">
+                <h2>Monitoramento em Tempo Real</h2>
+                <p>Nesta seção, seriam exibidos dados de monitoramento em tempo real, como gráficos de níveis de água, mapas de áreas de risco e status dos sensores. (Conteúdo demonstrativo)</p>
+                <div class="monitoring-placeholder">
+                    <p><strong>Exemplo de Dados Atuais:</strong></p>
+                    <p><strong>Rio Piracicaba:</strong> Nível atual <span style="color: green; font-weight: bold;">2.5m</span> (Estável)</p>
+                    <p><strong>Bueiro Central (Rua XV):</strong> Capacidade <span style="color: orange; font-weight: bold;">70%</span> (Atenção)</p>
+                    <p><strong>Represa Cantareira:</strong> Volume <span style="color: blue; font-weight: bold;">60%</span> (Normal)</p>
+                    <p><strong>Alerta Recente:</strong> 01/06/2025 - Chuva intensa na Bacia do Rio Tietê. Nível subiu 0.5m em 2h (Status: <span style="color: rgb(211, 181, 12); font-weight: bold;">ALERTA AMARELO</span> para a região de São Caetano do Sul).</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; <span id="current-year"></span> Flood Watch. Todos os direitos reservados.</p>
+            <p>Tecnologia a serviço da sua segurança.</p>
+        </div>
+    </footer>
+
+    <script src="../src/JS/script.js"></script>
+</body>
+</html>
