Finalizando a página services

--- a/pages/services.html
+++ b/pages/services.html
@@ -60,3 +60,31 @@
                         <p>Suporte técnico e consultoria para planejamento urbano e gestão de riscos hídricos.</p>
                     </div>
                 </div>
+                <section id="goals-services" class="content-section">
+                    <div class="container">
+                        <h2>Nossos Objetivos com os Serviços</h2>
+                        <p>Através da oferta de nossos serviços, a Flood Watch se empenha em alcançar os seguintes objetivos estratégicos:</p>
+                        <ul>
+                            <li><strong>Minimizar Perdas:</strong> Reduzir perdas materiais e humanas associadas a eventos de inundação por meio de avisos antecipados e precisos.</li>
+                            <li><strong>Otimizar a Gestão de Riscos:</strong> Capacitar municípios e empresas a tomar decisões informadas para a gestão de riscos hídricos, baseadas em dados em tempo real.</li>
+                            <li><strong>Promover a Resiliência:</strong> Contribuir para a construção de comunidades mais resilientes, capazes de se adaptar e se recuperar rapidamente de eventos climáticos extremos.</li>
+                            <li><strong>Inovação Contínua:</strong> Liderar o mercado de monitoramento hídrico, introduzindo constantemente novas tecnologias e aprimoramentos em nossos serviços.</li>
+                            <li><strong>Parceria e Suporte:</strong> Estabelecer parcerias duradouras com nossos clientes, oferecendo suporte técnico e consultoria contínuos para suas necessidades de monitoramento.</li>
+                        </ul>
+                        <p>Cada serviço que oferecemos é projetado com esses objetivos em mente, visando sempre a segurança e o bem-estar das comunidades.</p>
+                    </div>
+                </section>
+                </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; <span id="current-year"></span> Flood Watch. Todos os direitos reservados.</p>
+            <p>Tecnologia a serviço da sua segurança.</p>
+        </div>
+    </footer>
+
+    <script src="../src/JS/script.js"></script>
+</body>
+</html>
